--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,20 @@
 version: '2'
 services:
   zookeeper:
-    image: 'docker.io/bitnami/zookeeper:3.7'
+    image: 'confluentinc/cp-zookeeper'
     ports:
       - '2181:2181'
-    volumes:
-      - 'zookeeper_data:/bitnami'
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
+      - ZOOKEEPER_CLIENT_PORT=2181
+      - ZOOKEEPER_TICK_TIME=2000
   kafka:
-    image: 'docker.io/bitnami/kafka:3'
+    image: 'confluentinc/cp-kafka'
     ports:
       - '9092:9092'
-    volumes:
-      - 'kafka_data:/bitnami'
     environment:
-      - 'KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181'
-      - ALLOW_PLAINTEXT_LISTENER=yes
+      - 'KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181'
+      - 'KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092'
+      - 'KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1'
     depends_on:
       - zookeeper
-volumes:
-  zookeeper_data:
-    driver: local
-  kafka_data:
-    driver: local
