add some pureconfig

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,3 +2,17 @@ webservice {
     host: "localhost"
     port: 8080
 }
+kafkaConsumer {
+    broker: "localhost:9092"
+    topic: "test"
+    consumerId: "consumer-application"
+    keyDeserializer: "org.apache.kafka.common.serialization.StringDeserializer"
+    valueDeserializer: "org.apache.kafka.common.serialization.StringDeserializer"
+}
+kafkaProducer {
+    broker: "localhost:9092"
+    topic: "test"
+    producerId: "producer-application"
+    keySerializer: "org.apache.kafka.common.serialization.StringSerializer"
+    valueSerializer: "org.apache.kafka.common.serialization.StringSerializer"
+}
