Add elasticsearch yml

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,17 +2,20 @@ webservice {
     host: "localhost"
     port: 8080
 }
-kafkaConsumer {
+kafka-consumer {
     broker: "localhost:9092"
     topic: "test"
-    consumerId: "consumer-application"
-    keyDeserializer: "org.apache.kafka.common.serialization.StringDeserializer"
-    valueDeserializer: "org.apache.kafka.common.serialization.StringDeserializer"
+    consumer-id: "consumer-application"
+    key-deserializer: "org.apache.kafka.common.serialization.StringDeserializer"
+    value-deserializer: "org.apache.kafka.common.serialization.StringDeserializer"
 }
-kafkaProducer {
+kafka-producer {
     broker: "localhost:9092"
     topic: "test"
-    producerId: "producer-application"
-    keySerializer: "org.apache.kafka.common.serialization.StringSerializer"
-    valueSerializer: "org.apache.kafka.common.serialization.StringSerializer"
+    producer-id: "producer-application"
+    key-serializer: "org.apache.kafka.common.serialization.StringSerializer"
+    value-serializer: "org.apache.kafka.common.serialization.StringSerializer"
+}
+es-cluster {
+    host: "localhost:9200"
 }
